<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".logic.ui.profile.ProfileFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_background"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:scaleType="centerCrop"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/login"
        android:src="@drawable/profile_image"
        app:layout_constraintBottom_toBottomOf="@id/image_background"
        app:layout_constraintEnd_toEndOf="@id/image_background"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="@id/image_background"
        app:layout_constraintTop_toBottomOf="@id/image_background" />

    <TextView
        android:id="@+id/email_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_profile"
        tools:text="food" />

    <TextView
        android:id="@+id/name_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:textColor="@color/medium_black"
        android:textSize="@dimen/text_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_textview"
        tools:text="food" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logout_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/long_height"
        android:layout_marginHorizontal="@dimen/margin_x_large"
        android:layout_marginTop="@dimen/margin_large"
        android:background="@drawable/btn_background"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="@color/just_white"
        android:textSize="@dimen/text_large"
        app:iconGravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_textview" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/delete_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/long_height"
        android:layout_marginHorizontal="@dimen/margin_x_large"
        android:layout_marginTop="@dimen/margin_large"
        android:background="@drawable/btn_background_outline"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_large"
        app:iconGravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logout_button" />

    <TextView
        android:id="@+id/contactus_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:text="@string/you_need_support_contact_us"
        android:textColor="@color/black"
        android:textSize="@dimen/text_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>